--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,18 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>Tables</title>
+</head>
+<body>
+    <table>
+        <tr>
+            <td> 1</td> <td> 2</td>
+            </tr>
+            <tr>
+                 <td> 3</td> <td> 4</td>
+            </tr>
+    </table>
+
+</body>
+</html>
